Make sure wide and full alignments work globally.

--- a/seedlet-blocks/style.css
+++ b/seedlet-blocks/style.css
@@ -33,15 +33,28 @@ GNU General Public License for more details.
 	text-align: center;
 }
 
-/* Properly align items inside of site content. */
-.site-content .wp-block-group__inner-container > *:not(.entry-content) {
+/* Set up alignments */
+.wp-block-group .wp-block-group__inner-container > * {
 	max-width: var(--responsive--aligndefault-width);
 	margin-left: auto;
 	margin-right: auto;
 }
 
+.wp-block-group .wp-block-group__inner-container > .alignwide {
+	max-width: var(--responsive--alignwide-width);
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.wp-block-group .wp-block-group__inner-container > .alignfull {
+	max-width: calc(100% + (2 * var(--global--spacing-horizontal)));
+	width: calc(100% + (2 * var(--global--spacing-horizontal)));
+	margin-left: calc(-1 * var(--global--spacing-horizontal));
+	margin-right: auto;
+}
+
 /* Make sure full-width items in entry content show up as full-width. */
-.site-content .wp-block-group__inner-container .entry-content {
+.wp-block-group.site-content .wp-block-group__inner-container .entry-content {
 	max-width: calc(100% + (2 * var(--global--spacing-horizontal)));
 	width: calc(100% + (2 * var(--global--spacing-horizontal)));
 	margin-left: calc(-1 * var(--global--spacing-horizontal));
